Changed button cursor

--- a/ui/cleanebooksdialog.ui
+++ b/ui/cleanebooksdialog.ui
@@ -42,6 +42,9 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Scan</string>
    </property>
